# pmgr

./: Cargo.toml  README.md  install.sh
docs/: ARCHITECTURE.md  EXAMPLES.md
src/: main.rs
src/commands/: install.rs  list.rs  mod.rs  remove.rs  search.rs
src/config/: mod.rs  settings.rs
src/package/: mod.rs
src/ui/: app.rs  help_window.rs  home_state.rs  main_menu.rs  mod.rs  render.rs  selector.rs  spinner.rs  theme.rs  types.rs  update_window.rs
