[package]
name = "pmgr"
version = "0.1.0"
edition = "2021"
authors = ["David"]
description = "Modern TUI package manager for Arch Linux"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
colored = "2.1"
ratatui = "0.29"
crossterm = "0.28"
fuzzy-matcher = "0.3"

[profile.release]
opt-level = 3
lto = true
strip = true
